# SovereignFlow

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: sovereignflow.dev.yaml  sovereignflow.example.yaml  sovereignflow.prod.yaml
config/domains/: general.yaml  orders.yaml  regulations.yaml
demo/: README.md  relationships.json
demo/documents/: art_001_general_provisions.md  art_002_definitions.md  art_003_obligations.md  art_004_classification.md  art_005_risk_assessment.md  art_006_data_register.md  art_007_access_control.md  art_008_classified_handling.md  art_009_third_parties.md  art_010_incident_response.md  art_011_retention.md  art_012_enforcement.md  art_013_appeals.md  art_014_technical_standards.md  art_015_commencement.md
demo/scripts/: ingest.py
docs/: access-policy-api.md  architecture.md  dataset-import.md  deployment-verification-runbook.md  deployment-vps.md  keycloak-integration.md  operations-api.md  scalability-guidelines.md  stage-3-verification-runbook.md  vision-and-architecture.md
docs/Action/: action-template.md  call_model.md  enforce_model_transmission_policy.md  expand_graph.md  fail_conversation_turn.md  finalize.md  finalize_conversation_turn.md  json_decision_router.md  load_conversation_history.md  localai-rag-actions-migration-plan.md  loop_guard.md  manage_context_budget.md  normalize_query.md  prefix_router.md  repeat_query_guard.md  require_evidence.md  resolve_conversation.md  retrieve.md  set_variables.md  start_conversation_turn.md
docs/adr/: 0001-hexagonal-architecture.md  (+6 more)
examples/: run_memory_server.py
generator/: .gitignore  README.md  pyproject.toml
generator/src/dataset_generator/: __init__.py  cli.py  generation.py  identifiers.py  manifest.py  models.py  validation.py  writers.py
generator/src/dataset_generator/evaluation/: __init__.py  analyzer.py  cli.py  client.py  contracts.py  io.py  metrics.py  reports.py  thresholds.py
generator/tests/: conftest.py  test_architecture.py  test_cli.py  test_evaluation_analyzer.py  test_evaluation_cli.py  test_evaluation_client.py  test_evaluation_support.py  test_generation.py  test_identifiers.py  test_validation.py
pipelines/: conversation.yaml  default.yaml  direct.yaml  graph.yaml  strict.yaml
sovereignflow/: __init__.py  __main__.py  api.py  domain.py  import_cli.py  ingestion.py  models.py  ports.py  rag.py
tests/: conftest.py  test_access_policies.py  test_access_policies_integration.py  test_api.py  test_architecture.py  test_audit.py  test_authorization.py  test_bootstrap.py  test_config.py  test_conversation_history.py  test_conversation_repository.py  test_dataset_import_service.py  test_dataset_reader.py  test_domain.py  test_graph.py  test_http_gateways_integration.py  test_import_cli.py  test_ingestion_integration.py  test_ingestion_repository.py  test_ingestion_service.py  test_keycloak_integration.py  test_main.py  test_migration_runner.py  test_model_router.py  test_neutral_rag_integration.py  test_oidc.py  test_operations.py  test_pipeline.py  test_pipeline_repository.py  test_policy_administration.py  test_postgres_audit_integration.py  test_prompts_postgres.py  test_query_service.py  test_rag_service.py  test_security_models.py  test_weaviate.py  test_web_client_assets.py  test_web_keycloak_e2e.py
(+90 files in other folders)
