[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereignflow"
version = "0.1.0"
description = "Domain-neutral, local-first RAG foundation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Roland Rusiecki" }]
dependencies = [
  "Flask>=3.0,<4",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
local-ai = [
  "sentence-transformers>=3.0",
]
weaviate = [
  "weaviate-client>=4.9,<5",
]
postgres = [
  "SQLAlchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
]
dev = [
  "pytest>=8.0,<9",
  "pytest-cov>=5.0,<7",
]

[tool.setuptools.packages.find]
include = ["sovereignflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

