[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereignflow"
version = "1.0.0"
description = "Domain-neutral RAG foundation supporting local and external AI models"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Roland Rusiecki" }]
dependencies = [
  "Flask>=3.0,<4",
  "PyYAML>=6.0,<7",
  "waitress>=3.0,<4",
  "weaviate-client>=4.9,<5",
  "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-cov>=5.0,<7",
  "ruff>=0.11,<1",
]

[project.scripts]
sovereignflow = "sovereignflow.__main__:main"
sovereignflow-import = "sovereignflow.import_cli:main"

[tool.setuptools.packages.find]
include = ["sovereignflow*"]

[tool.setuptools.package-data]
"sovereignflow.infrastructure.migrations" = ["*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  "integration: tests multiple concrete adapters through their real protocols",
]

[tool.coverage.run]
branch = true
source = ["sovereignflow"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
