[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereignflow-dataset-generator"
version = "0.3.0"
description = "Deterministic streaming synthetic dataset generator for SovereignFlow tests"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-cov>=5.0,<7",
  "ruff>=0.11,<1",
]

[project.scripts]
sovereignflow-dataset-generator = "dataset_generator.cli:main"
sovereignflow-dataset-evaluator = "dataset_generator.evaluation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  "integration: tests the generator through filesystem or CLI boundaries",
]

[tool.coverage.run]
branch = true
source = ["dataset_generator"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
